--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!--Website Pages Links-->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 
   <meta name="theme-color" content="#fafafa">
@@ -40,10 +40,10 @@
     <div class="content-wrapper">
 
       <figure>
-        <a href="/index.html">
+        <a href="index.html">
 
-          <img src="/img/unpluggedlogo.png" alt="unplugged-logo">
-          
+          <img src="img/unpluggedlogo.png" alt="unplugged-logo">
+
         </a>
       </figure>
 
@@ -55,11 +55,11 @@
         <ul>
 
           <li>
-            <a href="faq/index.html" target="self">FAQ</a>
+            <a href="faq/index.html" target="self">faq</a>
           </li>
 
           <li>
-            <a href="about/index.html" target="self">ABOUT</a>
+            <a href="about/index.html" target="self">about</a>
           </li>
 
         </ul>
@@ -196,7 +196,7 @@
         <article>
 
           <figure>
-            <img src="/img/omar-lopez-296944-unsplash.png" alt="photo of group of women">
+            <img src="img/omar-lopez-296944-unsplash.png" alt="photo of group of women">
           </figure>
 
           <div>
