--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,9 @@
 
     <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css" media="screen" />
+
+    <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen" />
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -32,8 +33,8 @@
     <header>
 
         <figure>
-            <a href="/index.html">
-                <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+            <a href="./index.html">
+                <img src="../img/unpluggedlogo.png" alt="unplugged logo">
             </a>
         </figure>
 
@@ -44,7 +45,7 @@
             <nav>
 
                 <ul>
-                    <li><a href="/faq/index.html" target="self">FAQ</a></li>
+                    <li><a href="../faq/index.html" target="self">FAQ</a></li>
                     <li><a href="index.html" target="self">ABOUT</a></li>
                 </ul>
 
