--- a/faq/index.html
+++ b/faq/index.html
@@ -22,8 +22,9 @@
 
     <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css" media="screen" />
+
+    <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen" />
 
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -33,8 +34,8 @@
     <header>
 
         <figure>
-            <a href="/index.html">
-                <img src="/img/unpluggedlogo.png" alt="unplugged logo">
+            <a href="../index.html">
+                <img src="../img/unpluggedlogo.png" alt="unplugged logo">
             </a>
         </figure>
 
@@ -47,7 +48,7 @@
 
                 <ul>
                     <li><a href="index.html" target="self">FAQ</a></li>
-                    <li><a href="/about/index.html" target="self">ABOUT</a></li>
+                    <li><a href="../about/index.html" target="self">ABOUT</a></li>
                 </ul>
 
             </nav>
