--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Faq</title>
+    <title>Unplugged Retreat</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,8 +12,8 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
 
-    <link rel="manifest" href="..site.webmanifest">
-    <link rel="apple-touch-icon" href="..icon.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!--Google Font Links-->
@@ -26,20 +26,27 @@
 
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen" />
 
+
+
     <meta name="theme-color" content="#fafafa">
+
 </head>
 
 <body>
 
     <header>
 
-        <figure>
-            <a href="../index.html">
-                <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-            </a>
-        </figure>
+
 
         <div class="content-wrapper">
+
+            <figure>
+                <a href="../index.html">
+
+                    <img src="../img/unpluggedlogo.png" alt="unplugged-logo">
+
+                </a>
+            </figure>
 
 
             <div class="header-divider"></div>
@@ -47,8 +54,15 @@
             <nav>
 
                 <ul>
-                    <li><a href="index.html" target="self">FAQ</a></li>
-                    <li><a href="../about/index.html" target="self">ABOUT</a></li>
+
+                    <li>
+                        <a href="index.html" target="self">faq</a>
+                    </li>
+
+                    <li>
+                        <a href="../about/index.html" target="self">about</a>
+                    </li>
+
                 </ul>
 
             </nav>
