Fixed CSS stylesheet link

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <script src="https://kit.fontawesome.com/cfe73f7aee.js" crossorigin="anonymous"></script>
 
-      <link rel="stylesheet" href="/css/normalize.css" type="text/css" media="screen" />
+      <link rel="stylesheet" href="./css/normalize.css" type="text/css" media="screen" />
       
-      <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" />
+      <link rel="stylesheet" href="./css/main.css" type="text/css" media="screen" />
 
 
 
